<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.calc.finanziellefreiheitrechner.mitFragment">

    <TextView
        android:id="@+id/tvEins_mit"
        style="@style/tvStil_heading"
        android:text="@string/tvAusgabeEins"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/tvSparbetrag_mit"
        style="@style/tvStil"
        android:layout_marginTop="16dp"
        android:text="@string/tvSparbetrag"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEins_mit" />


    <SeekBar
        android:id="@+id/sBSparbetrag_mit"
        style="@style/sbStil"
        android:layout_width="0dp"
        android:min="1"
        app:layout_constraintTop_toBottomOf="@id/tvSparbetrag_mit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:id="@+id/tvZwei_mit"
        style="@style/tvInvisible"
        android:text="@string/tvAusgabeZwei"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSparbetrag_mit"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/tvEndkapital_mit"
        style="@style/tvInvisible"
        android:text="@string/tvEndkapital"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvZwei_mit" />

    <TextView
        android:id="@+id/tvEndkapitalResult_mit"
        style="@style/tvInvisible"
        android:text="@string/tvEndkapitalResult"
        app:layout_constraintLeft_toRightOf="@id/tvEndkapital_mit"
        app:layout_constraintTop_toBottomOf="@id/tvZwei_mit" />

<!--    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:contentDescription="under construction"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/popzebraconstruction" />

    <TextView
        android:id="@+id/textView2"
        style="@style/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textStyle="bold"
        android:text="Comming Soon!"
        android:textAllCaps="true" />-->

</androidx.constraintlayout.widget.ConstraintLayout>